[package]
name = "dsfb-lattice"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
default-run = "dsfb-lattice"
description = "Standalone DSFB lattice and phonon toy-model demonstrator for bounded empirical studies"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/infinityabundance/dsfb"
homepage = "https://github.com/infinityabundance/dsfb"
keywords = ["dsfb", "lattice", "phonon", "spectral", "simulation"]
categories = ["science", "simulation", "command-line-utilities"]
include = [
    "src/**",
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "dsfb_lattice_colab.ipynb",
    "output-dsfb-lattice/.gitkeep",
]

[workspace]

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive"] }
csv = "1.3"
nalgebra = "0.33"
plotters = "0.3.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }

[lib]
name = "dsfb_lattice"
path = "src/lib.rs"

[[bin]]
name = "dsfb-lattice"
path = "src/main.rs"
