[package]
name = "dsfb-lcss-hret"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
authors = ["Riaan de Beer"]
license = "Apache-2.0"
description = "IEEE L-CSS figure generation for DSFB high-rate estimation trust analysis"
repository = "https://github.com/infinityabundance/dsfb"
homepage = "https://github.com/infinityabundance/dsfb"
keywords = ["estimation", "benchmark", "lcss", "figures"]
categories = ["science", "algorithms", "command-line-utilities"]

# This crate is intentionally NOT part of the workspace
[workspace]

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
nalgebra = "0.33"
rand = "0.8"
rand_chacha = "0.3"
rand_distr = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
