[package]
name = "dsfb-oil-gas"
version = "0.1.0"
authors = ["Riaan de Beer - Invariant Forge LLC - <riaan@invariantforge.net>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/infinityabundance/dsfb/tree/main/crates/dsfb-oil-gas"
documentation = "https://docs.rs/dsfb-oil-gas"
description = "DSFB deterministic residual structuring framework for Upstream and Midstream Oil and Gas systems. A deterministic, read-only, observer-only augmentation layer for typed residual
interpretation. The core engine is no_std + no_alloc. Unsafe code is forbidden in the library.
Dataset loading, fleet evaluation, reporting, and executable examples are std-gated."
keywords = ["dsfb", "oil", "gas", "drilling", "pipeline", "prognostics", "no_std"]
categories = ["data-processing", "simulation", "command-line-utilities" ,"no-std", "science"]
# ── Kani formal verification ─────────────────────────────────────────────────
# 15 Kani harnesses are in src/kani_proofs.rs (compiled only under cfg(kani)).
# To run all proofs:
#   cargo install --locked kani-verifier && cargo kani setup
#   cargo kani
# To run a single harness:
#   cargo kani --harness proof_grammar_compound_precedence
#
# Claim mapping (src/kani_proofs.rs):
#   Claim 1 — Determinism            : proofs 1–2, 10
#   Claim 2 — Non-interference       : proof  3
#   Claim 3 — r/δ/σ pipeline         : proofs 4–5
#   Claim 4 — Admissibility envelope : proofs 6–8
#   Claim 5 — Grammar classification : proofs 9, 11–12, 12b, 13, 14

[[bin]]
name = "dsfb-oil-gas"
path = "src/main.rs"
required-features = ["std"]

[lib]
name = "dsfb_oil_gas"
path = "src/lib.rs"

[[test]]
name = "basic_invariants"
required-features = ["alloc"]

[[test]]
name = "non_interference"
required-features = ["alloc"]

[[test]]
name = "real_data_3w"
required-features = ["std"]

[[test]]
name = "real_data_esp"
required-features = ["std"]

[[test]]
name = "real_data_volve"
required-features = ["std"]

[[example]]
name = "export_grammar_traces"
required-features = ["std"]

[[example]]
name = "metrics_3w"
required-features = ["std"]

[[example]]
name = "metrics_esp"
required-features = ["std"]

[[example]]
name = "metrics_volve"
required-features = ["std"]

# ── Feature flags ─────────────────────────────────────────────────────────────
# default  : full std build (binary, loaders, report, CSV I/O)
# alloc    : Vec/String types; grammar engine, episode aggregation, domain frames
# (neither): pure no_std/no_alloc core — GrammarState, AdmissibilityEnvelope,
#            GrammarClassifier, SlewEstimator, CoordClass, evaluate() — no heap, no unsafe
[features]
default = ["std"]
std    = ["alloc", "dep:csv", "dep:thiserror", "serde/std"]
alloc  = ["serde/alloc"]

[dependencies]
csv       = { version = "1.3", optional = true }
serde     = { version = "1.0", features = ["derive"], default-features = false }
thiserror = { version = "1.0", optional = true }

[dev-dependencies]
approx = "0.5"

# ── Lints ─────────────────────────────────────────────────────────────────────
# Allow cfg(kani) in normal builds; the harnesses only compile under Kani itself.
[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(kani)'] }
