[package]
name = "dsfb-semiconductor"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
default-run = "dsfb-semiconductor"
license = "Apache-2.0"
description = "Deterministic DSFB semiconductor benchmark companion for SECOM and PHM-style dataset adapters"
readme = "README.md"
repository = "https://github.com/infinityabundance/dsfb"
homepage = "https://github.com/infinityabundance/dsfb"
keywords = ["dsfb", "semiconductor", "process-control", "spc", "fdc"]
categories = ["science", "command-line-utilities"]
include = [
    "src/**",
    "tests/**",
    "paper/**",
    "notebooks/**",
    "dsfb_semiconductor.ipynb",
    "data/**",
    "Cargo.toml",
    "README.md",
]

[workspace]

[dependencies]
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
flate2 = "1.0"
plotters = { version = "0.3", default-features = false, features = ["bitmap_backend", "bitmap_encoder", "line_series", "ttf"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4"
thiserror = "2.0"
ureq = { version = "2.10", default-features = true }
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3.13"

[lib]
name = "dsfb_semiconductor"
path = "src/lib.rs"

[[bin]]
name = "dsfb-semiconductor"
path = "src/main.rs"
