[package]
name = "dsfb-semiconductor"
version = "0.1.1"
edition = "2021"
rust-version = "1.74"
default-run = "dsfb-semiconductor"
license = "Apache-2.0"
description = "Deterministic DSFB semiconductor benchmark companion for SECOM and PHM-style dataset adapters"
readme = "README.md"
repository = "https://github.com/infinityabundance/dsfb"
homepage = "https://github.com/infinityabundance/dsfb"
keywords = ["dsfb", "semiconductor", "process-control", "spc", "fdc"]
categories = ["science", "command-line-utilities"]
include = [
    "src/**",
    "tests/**",
    "examples/**",
    "paper/**",
    "notebooks/**",
    "dsfb_semiconductor.ipynb",
    "Cargo.toml",
    "README.md",
]


[features]
# std (default): full build — CLI, I/O, filesystem, networking, plotting,
#   dataset adapters, calibration, report generation.
#
# no_std kernel: compile with --no-default-features --lib.
#   Available modules: process_context, units, signs, sign, grammar,
#   grammar::layer, syntax, policy, semantics, config, nominal, residual, input.
#   Requires: alloc crate (provided by the target runtime).
#   Verified by CI: cargo check --lib --no-default-features
#                               --target thumbv7em-none-eabi
default = ["std"]
std = [
    "serde/std",
    "thiserror/std",
    "dep:chrono",
    "dep:clap",
    "dep:csv",
    "dep:flate2",
    "dep:plotters",
    "dep:serde_json",
    "dep:tar",
    "dep:ureq",
    "dep:zip",
]

[dependencies]
# Always present — no_std-compatible with alloc.
serde     = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
thiserror = { version = "2.0", default-features = false }

# std-only dependencies — compiled only when the `std` feature is active.
chrono     = { version = "0.4",  optional = true, features = ["clock", "serde"] }
clap       = { version = "4.5",  optional = true, features = ["derive"] }
csv        = { version = "1.3",  optional = true }
flate2     = { version = "1.0",  optional = true }
plotters   = { version = "0.3",  optional = true, default-features = false, features = ["bitmap_backend", "bitmap_encoder", "line_series", "ttf"] }
serde_json = { version = "1.0",  optional = true }
tar        = { version = "0.4",  optional = true }
ureq       = { version = "2.10", optional = true, default-features = true }
zip        = { version = "2",    optional = true, default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3.13"

[lib]
name = "dsfb_semiconductor"
path = "src/lib.rs"

[[bin]]
name = "dsfb-semiconductor"
path = "src/main.rs"
