[package]
name = "dsfb-semiotics-engine"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
default-run = "dsfb-semiotics-engine"
description = "Deterministic structural semiotics engine for residual-based meaning extraction with reproducible artifacts"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/infinityabundance/dsfb"
homepage = "https://github.com/infinityabundance/dsfb"
keywords = ["dsfb", "semiotics", "diagnostics", "reproducibility", "research"]
categories = ["science", "simulation", "command-line-utilities"]
include = [
    ".github/workflows/**",
    "ci/**",
    "docs/**",
    "data/public_dataset/raw/**",
    "data/processed/**",
    "benches/**",
    "src/**",
    "examples/**",
    "ffi/**",
    "python/**",
    "proofs/**",
    "tools/**",
    "tests/**",
    "tests/fixtures/**",
    "Cargo.toml",
    "Cargo.lock",
    "deny.toml",
    "kani.toml",
    "README.md",
    "CONTRIBUTING.md",
    "justfile",
    "dsfb_semiotics_engine_colab.ipynb",
    ".gitignore",
    "output-dsfb-semiotics-engine/.gitkeep",
]

[workspace]
members = [".", "ffi"]

[features]
default = ["external-bank"]
external-bank = []
numeric-f32 = []
numeric-fixed = []

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive"] }
csv = "1.3"
plotters = { version = "0.3.7", default-features = false, features = ["bitmap_backend", "bitmap_encoder", "svg_backend", "line_series", "point_series", "area_series", "ttf"] }
printpdf = { version = "0.7", features = ["embedded_images"] }
ratatui = { version = "0.29", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
criterion = { version = "0.5.1", default-features = false, features = ["cargo_bench_support"] }
proptest = "1"
tempfile = "3"

[lib]
name = "dsfb_semiotics_engine"
path = "src/lib.rs"

[[bin]]
name = "dsfb-semiotics-engine"
path = "src/main.rs"

[[bench]]
name = "execution_budget"
harness = false
