[package]
name = "dsfb-starship"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
authors = ["Riaan de Beer"]
license = "Apache-2.0"
description = "Starship-style hypersonic re-entry 6-DoF DSFB demonstration with plasma blackout"
readme = "README.md"
repository = "https://github.com/infinityabundance/dsfb"
homepage = "https://github.com/infinityabundance/dsfb"
documentation = "https://docs.rs/dsfb-starship"
keywords = ["starship", "reentry", "estimation", "dsfb", "simulation"]
categories = ["science", "algorithms", "command-line-utilities"]
include = [
    "src/**",
    "Cargo.toml",
    "README.md",
    "pyproject.toml",
    "starship_reentry_demo.ipynb",
]

[lib]
name = "dsfb_starship"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "dsfb-starship"
path = "src/main.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4"
csv = "1.3"
dsfb = { version = "0.1.1", path = "../dsfb" }
nalgebra = { version = "0.33", features = ["serde-serialize"] }
plotters = "0.3"
pyo3 = { version = "0.22", features = ["abi3-py39", "extension-module", "serde"] }
rand = "0.8"
rand_chacha = "0.3"
rand_distr = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
