[package]
name = "dsfb-swarm"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
authors = ["OpenAI Codex"]
license = "Apache-2.0"
default-run = "dsfb-swarm"
description = "Deterministic spectral residual inference demonstrator for swarm interaction networks"
readme = "README.md"
repository = "https://github.com/infinityabundance/dsfb"
homepage = "https://github.com/infinityabundance/dsfb"
documentation = "https://docs.rs/dsfb-swarm"
keywords = ["deterministic", "swarm", "spectral", "laplacian", "trust"]
categories = ["science", "simulation", "command-line-utilities"]
include = [
    "src/**",
    "tests/**",
    "examples/**",
    "notebooks/**",
    "assets/**",
    "Cargo.toml",
    "README.md",
    ".gitignore",
]

[workspace]

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive"] }
csv = "1.3"
nalgebra = { version = "0.33", features = ["serde-serialize"] }
plotters = { version = "0.3.7", default-features = false, features = ["bitmap_backend", "bitmap_encoder", "line_series", "point_series", "ttf"] }
printpdf = "0.7"
image = { version = "0.25", default-features = false, features = ["png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[lib]
name = "dsfb_swarm"
path = "src/lib.rs"

[[bin]]
name = "dsfb-swarm"
path = "src/main.rs"
