[package]
name = "dsfb-tmtr"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
default-run = "dsfb-tmtr"
description = "Deterministic Trust-Monotone Temporal Recursion simulation framework"

[workspace]

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive"] }
csv = "1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
name = "dsfb_tmtr"
path = "src/lib.rs"

[[bin]]
name = "dsfb-tmtr"
path = "src/main.rs"
