[package]
name = "dsfb"
version = "0.1.2"
edition = "2021"
rust-version = "1.70"
authors = ["Riaan de Beer"]
license = "Apache-2.0"
description = "Drift-Slew Fusion Bootstrap (DSFB) state estimation"
repository = "https://github.com/infinityabundance/dsfb"
homepage = "https://github.com/infinityabundance/dsfb"
documentation = "https://docs.rs/dsfb"
readme = "README.md"
keywords = ["estimation", "observer", "fusion", "trust"]
categories = ["algorithms", "science"]
include = [
    "src/**",
    "examples/**",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

[dependencies]
rand = "0.8"
rand_distr = "0.4"

[dev-dependencies]

[[example]]
name = "drift_impulse"
path = "examples/drift_impulse.rs"
